tests/baselines/reference/parseJsxElementInUnaryExpressionNoCrash2.errors.txt
a.js(1,9): error TS1109: Expression expected.


==== a.js (1 errors) ====
    ~<></> <
            
!!! error TS1109: Expression expected.
    